--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>FluidQrServer</title>
-    <meta name="description" content="Fluid QR by [bild:werk] medien" />
+    <title>Fluid QR by [bild:werk] medien</title>
+    <meta name="description" content="Create dynamic links fst & simple" />
     <meta name="google" content="notranslate" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="theme-color" content="#000000" />
